--- a/Hybrid Experience - Mobile App/Assets/Scripts/UI/USS/MessageStyleSheet.uss
+++ b/Hybrid Experience - Mobile App/Assets/Scripts/UI/USS/MessageStyleSheet.uss
@@ -36,6 +36,13 @@ VisualElement {
     flex-grow: 1;
 }
 
+.text-overflow {
+    text-overflow: ellipsis;
+    -unity-text-overflow-position: end;
+    overflow: hidden;
+    white-space: nowrap;
+}
+
 .message-sender {
     color: rgb(255, 255, 255);
     -unity-font-style: bold;
